...
  "@forgot_password_view": {},
  "forgot_password_email": "Email",
  "forgot_password_email_validation_error": "Please enter a valid email",
  "forgot_password_send_instructions": "Send Instructions", 
  "forgot_password_sending": "Sending..",
  "forgot_password_new_user": "New User?",
  "forgot_password_sign_up": "Sign Up",
  "forgot_password_sending_instructions": "Sending Instructions",
  "forgot_password_instructions_sent_title": "Instructions Sent",
  "forgot_password_instructions_sent_message": "Password reset instructions have been sent to your email",
  "forgot_password_error": "Error",
  "forgot_password_link": "Forgot Password?",

  "@login_view": {},
  "login_email": "Email",
  "login_email_validation_error": "Please enter a valid email",
  "login_password_validation_error": "Password can't be empty",
  "login_forgot_password": "Forgot Password?",
  "login_authenticating": "Authenticating...",
  "login_button": "Login",
  "login_new_user": "New User?",
  "login_sign_up": "Sign Up",
  "login_success_title": "Login Successful",
  "login_success_message": "Welcome back!",
  "login_error": "Error",

...
  "profile_view_joined": "Joined",
  "profile_view_country": "Country",
  "profile_view_educational_institute": "Educational Institute",
  "profile_view_subscribed_to_mails": "Subscribed to mails",
  "profile_view_yes": "Yes",
  "profile_view_no": "No",
  "profile_view_title": "Profile",
  "profile_view_circuits": "Circuits",
  "profile_view_favourites": "Favourites",

  "@edit_project_view": {},
  "edit_project_name": "Name",
  "edit_project_name_validation_error": "Name cannot be empty",
  "edit_project_tags_list": "Tags List",
  "edit_project_access_type": "Project Access Type",
...
