...
class Projects {
  factory Projects.fromJson(Map<String, dynamic> json) => Projects(
    data: List<Project>.from(json['data'].map((x) => Project.fromJson(x))),
    links: Links.fromJson(json['links']),
  );

  Projects({required this.data, required this.links});
  List<Project> data;
  Links links;
}

class Project {
  factory Project.fromJson(Map<String, dynamic> json) => Project(
...
