...
  String get simulator => 'Simulator';

  @override
  String get interactive_book => 'Interactive Book';

  @override
  String get about => 'About';

  @override
  String get contribute => 'Contribute';

  @override
  String get teachers => 'Teachers';

  @override
  String get my_groups => 'My Groups';

  @override
  String get login => 'Login';
...
  String get join_slack => 'Join and chat with us at';

  @override
  String get slack_channel => 'Slack channel';

  @override
  String get contributors => 'Contributors';

  @override
  String get contributors_subtitle => 'Meet the awesome people of CircuitVerse community that\'ve made this platform what it is now.';

  @override
  String get tos_section1_title => '1. User Agreement';
...
